<resources>
    <string name="app_name" translatable="false">Session</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="accountIDCopy">Copy Account ID</string>
    <string name="accountId">Account ID</string>
    <string name="accountIdCopied">Account ID Copied</string>
    <string name="accountIdCopyDescription">Copy your Account ID then share it with your friends so they can message you.</string>
    <string name="accountIdEnter">Enter Account ID</string>
    <string name="accountIdErrorInvalid">This Account ID is invalid. Please check and try again.</string>
    <string name="accountIdOrOnsEnter">Enter Account ID or ONS</string>
    <string name="accountIdOrOnsInvite">Invite Account ID or ONS</string>
    <string name="accountIdShare">Hey, I\'ve been using {app_name} to chat with complete privacy and security. Come join me! My Account ID is\n\n{account_id}\n\nDownload it at {session_download_url}</string>
    <string name="accountIdYours">Your Account ID</string>
    <string name="accountIdYoursDescription">This is your Account ID. Other users can scan it to start a conversation with you.</string>
    <string name="actualSize">Actual Size</string>
    <string name="add">Add</string>
    <plurals name="addAdmin">
        <item quantity="one">Add Admin</item>
        <item quantity="other">Add Admins</item>
    </plurals>
    <string name="addAdminSingular">Add Admin</string>
    <string name="addAdminsDescription">Enter the Account ID of the user you are promoting to admin.\n\nTo add multiple users, enter each Account ID separated by a comma. Up to 20 Account IDs can be specified at a time.</string>
    <string name="admin">Admin</string>
    <string name="adminCannotBeDemoted">Admins cannot be demoted or removed from the group.</string>
    <string name="adminCannotBeRemoved">Admins cannot be removed.</string>
    <string name="adminMorePromotedToAdmin"><b>{name}</b> and <b>{count} others</b> were promoted to Admin.</string>
    <string name="adminPromote">Promote Admins</string>
    <string name="adminPromoteDescription">Are you sure you want to promote <b>{name}</b> to admin? Admins cannot be removed.</string>
    <string name="adminPromoteMoreDescription">Are you sure you want to promote <b>{name}</b> and <b>{count} others</b> to admin? Admins cannot be removed.</string>
    <string name="adminPromoteToAdmin">Promote to Admin</string>
    <string name="adminPromoteTwoDescription">Are you sure you want to promote <b>{name}</b> and <b>{other_name}</b> to admin? Admins cannot be removed.</string>
    <string name="adminPromotedToAdmin"><b>{name}</b> was promoted to Admin.</string>
    <string name="adminPromotionFailed">Admin promotion failed</string>
    <string name="adminPromotionFailedDescription">Failed to promote {name} in {group_name}</string>
    <string name="adminPromotionFailedDescriptionMultiple">Failed to promote {name} and {count} others in {group_name}</string>
    <string name="adminPromotionFailedDescriptionTwo">Failed to promote {name} and {other_name} in {group_name}</string>
    <string name="adminPromotionNotSent">Promotion not sent</string>
    <string name="adminPromotionSent">Admin promotion sent</string>
    <string name="adminPromotionStatusUnknown">Promotion status unknown</string>
    <string name="adminRemove">Remove Admins</string>
    <string name="adminRemoveAsAdmin">Remove as Admin</string>
    <string name="adminRemoveCommunityNone">There are no Admins in this Community.</string>
    <string name="adminRemoveFailed">Failed to remove {name} as Admin.</string>
    <string name="adminRemoveFailedMultiple">Failed to remove <b>{name}</b> and <b>{count} others</b> as Admin.</string>
    <string name="adminRemoveFailedOther">Failed to remove <b>{name}</b> and <b>{other_name}</b> as Admin.</string>
    <string name="adminRemovedUser"><b>{name}</b> was removed as Admin.</string>
    <string name="adminRemovedUserMultiple"><b>{name}</b> and <b>{count} others</b> were removed as Admin.</string>
    <string name="adminRemovedUserOther"><b>{name}</b> and <b>{other_name}</b> were removed as Admin.</string>
    <plurals name="adminSelected">
        <item quantity="one">%1$d Admin Selected</item>
        <item quantity="other">%1$d Admins Selected</item>
    </plurals>
    <plurals name="adminSendingPromotion">
        <item quantity="one">Sending admin promotion</item>
        <item quantity="other">Sending admin promotions</item>
    </plurals>
    <string name="adminSettings">Admin Settings</string>
    <string name="adminStatusYou">You cannot change your admin status. To leave the group, open the conversation settings and select Leave Group.</string>
    <string name="adminTwoPromotedToAdmin"><b>{name}</b> and <b>{other_name}</b> were promoted to Admin.</string>
    <string name="admins">Admins</string>
    <string name="allow">Allow</string>
    <string name="andMore">+{count}</string>
    <string name="anonymous">Anonymous</string>
    <string name="appIcon">App Icon</string>
    <string name="appIconAndNameChange">Change App Icon and Name</string>
    <string name="appIconAndNameChangeConfirmation">Changing the app icon and name requires {app_name} to be closed. Notifications will continue to use the default {app_name} icon and name.</string>
    <string name="appIconAndNameDescription">Alternate app icon and name is displayed on home screen and app drawer.</string>
    <string name="appIconAndNameSelectionDescription">The selected app icon and name is displayed on the home screen and app drawer.</string>
    <string name="appIconAndNameSelectionTitle">Icon and name</string>
    <string name="appIconDescription">Alternate app icon is displayed on home screen and app library. App name will still appear as \'{app_name}\'.</string>
    <string name="appIconEnableIcon">Use alternate app icon</string>
    <string name="appIconEnableIconAndName">Use alternate app icon and name</string>
    <string name="appIconSelect">Select alternate app icon</string>
    <string name="appIconSelectionTitle">Icon</string>
    <string name="appNameCalculator">Calculator</string>
    <string name="appNameMeetingSE">MeetingSE</string>
    <string name="appNameNews">News</string>
    <string name="appNameNotes">Notes</string>
    <string name="appNameStocks">Stocks</string>
    <string name="appNameWeather">Weather</string>
    <string name="appProBadge">{app_pro} Badge</string>
    <string name="appearanceAutoDarkMode">Auto Dark Mode</string>
    <string name="appearanceHideMenuBar">Hide Menu Bar</string>
    <string name="appearanceLanguage">Language</string>
    <string name="appearanceLanguageDescription">Choose your language setting for {app_name}. {app_name} will restart when you change your language setting.</string>
    <string name="appearancePreview1">How are you?</string>
    <string name="appearancePreview2">I\'m good thanks, you?</string>
    <string name="appearancePreview3">I\'m doing great, thanks.</string>
    <string name="appearancePrimaryColor">Primary Color</string>
    <string name="appearanceThemes">Themes</string>
    <string name="appearanceThemesClassicDark">Classic Dark</string>
    <string name="appearanceThemesClassicLight">Classic Light</string>
    <string name="appearanceThemesOceanDark">Ocean Dark</string>
    <string name="appearanceThemesOceanLight">Ocean Light</string>
    <string name="appearanceZoom">Zoom</string>
    <string name="appearanceZoomIn">Zoom In</string>
    <string name="appearanceZoomOut">Zoom Out</string>
    <string name="attachment">Attachment</string>
    <string name="attachments">Attachments</string>
    <string name="attachmentsAdd">Add attachment</string>
    <string name="attachmentsAlbumUnnamed">Unnamed Album</string>
    <string name="attachmentsAutoDownload">Auto-download Attachments</string>
    <string name="attachmentsAutoDownloadDescription">Automatically download media and files from this chat.</string>
    <string name="attachmentsAutoDownloadModalDescription">Would you like to automatically download all files from <b>{conversation_name}</b>?</string>
    <string name="attachmentsAutoDownloadModalTitle">Auto Download</string>
    <string name="attachmentsClearAll">Clear All Attachments</string>
    <string name="attachmentsClearAllDescription">Are you sure you want to clear all attachments? Messages with attachments will also be deleted.</string>
    <string name="attachmentsClickToDownload">Click to download {file_type}</string>
    <string name="attachmentsCollapseOptions">Collapse attachment options</string>
    <string name="attachmentsCollecting">Collecting attachments...</string>
    <string name="attachmentsDownload">Download Attachment</string>
    <string name="attachmentsDuration">Duration:</string>
    <string name="attachmentsErrorLoad">Error attaching file</string>
    <string name="attachmentsErrorMediaSelection">Failed to select attachment</string>
    <string name="attachmentsErrorNoApp">Can\'t find an app to select media.</string>
    <string name="attachmentsErrorNotSupported">This file type is not supported.</string>
    <string name="attachmentsErrorNumber">Unable to send more than 32 image and video files at once.</string>
    <string name="attachmentsErrorOpen">Unable to open file.</string>
    <string name="attachmentsErrorSending">Error sending file</string>
    <string name="attachmentsErrorSeparate">Please send files as separate messages.</string>
    <string name="attachmentsErrorSize">Files must be less than 10MB</string>
    <string name="attachmentsErrorTypes">Cannot attach images and video with other file types. Try sending other files in a separate message.</string>
    <string name="attachmentsExpired">Attachment expired</string>
    <string name="attachmentsFileId">File ID:</string>
    <string name="attachmentsFileSize">File Size:</string>
    <string name="attachmentsFileType">File Type:</string>
    <string name="attachmentsFilesEmpty">You don\'t have any files in this conversation.</string>
    <string name="attachmentsImageErrorMetadata">Unable to remove metadata from file.</string>
    <string name="attachmentsLoadingNewer">Loading Newer Media...</string>
    <string name="attachmentsLoadingNewerFiles">Loading Newer Files...</string>
    <string name="attachmentsLoadingOlder">Loading Older Media...</string>
    <string name="attachmentsLoadingOlderFiles">Loading Older Files...</string>
    <string name="attachmentsMedia">{name} on {date_time}</string>
    <string name="block">Block</string>
    <string name="blockUnblock">Unblock</string>
    <string name="communityUrlCopy">Copy Community URL</string>
    <string name="contactUserDetails">User Details</string>
    <string name="delete">Delete</string>
    <string name="leave">Leave</string>
    <string name="messageMarkRead">Mark read</string>
    <string name="notificationsContent">Notification Content</string>
    <string name="notificationsContentDescription">The information shown in notifications.</string>
    <string name="notificationsFastModeDescription">You\'ll be notified of new messages reliably and immediately using Google\'s notification Servers.</string>
    <string name="notificationsGoToDevice">Go to device notification settings</string>
    <string name="notificationsMute">Mute</string>
    <string name="notificationsMuteUnmute">Unmute</string>
    <string name="notificationsSound">Sound</string>
    <string name="notificationsSoundDescription">Sound when App is open</string>
    <string name="notificationsStrategy">Notification Strategy</string>
    <string name="notificationsStyle">Notification Style</string>
    <string name="notificationsVibrate">Vibrate</string>
    <string name="pin">Pin</string>
    <string name="pinUnpin">Unpin</string>
    <string name="sessionNotifications">Notifications</string>
    <string name="useFastMode">Use Fast Mode</string>
</resources>